[TVIZ-343] Fix visually-hidden overflow scroll position bug in Chrome 71

--- a/src/components/store/store.scss
+++ b/src/components/store/store.scss
@@ -3,6 +3,13 @@
 //--- Fixes and overrides for Carbon components ---//
 
 .kernel-pipeline {
+  // Prevent Chrome 71 focus scroll bug in Studio, by containing the
+  // visually-hidden mixin in a wrapper to prevent it escaping and somehow
+  //  messing up the overflow:hiddenscroll positioning.
+  .cbn-switch {
+    position: relative;
+  }
+
   // Don't let the radio button circles collapse
   .cbn-switch-radio__box {
     min-width: 20px;
